--- a/Portfolio.css
+++ b/Portfolio.css
@@ -2641,13 +2641,14 @@ body {
     margin-bottom: 2rem !important;
   }
   .section_fourth-content_body_box_right{
-    width: 1000px;
-    height: 600px;
+    width: 416px;
+    height: 100%;
+    margin: 0 auto;
   }
   .section_fourth-content_body_box_right img{
     width: 100%;
     height: 100%;
-    object-position: 0 -500px;
+    object-position: 0 0px;
     object-fit: cover;
     transition: object-position 0.1s linear;
 
