--- a/Portfolio.css
+++ b/Portfolio.css
@@ -108,7 +108,7 @@ body {
     background-color: var(--body-color);
     color: var(--text-menu-color);
     background: var(--bg-main-color-black);
-    overflow-x: hidden;
+
   }
   
   h1 {
@@ -1374,7 +1374,7 @@ body {
       position: relative;
     }
     .section_fifth-content_body_box_bg{
-
+      
 
     }
     .section_fifth-content_body_box_bg_left{
@@ -2208,10 +2208,11 @@ body {
 
 @media only screen and (max-width: 430px) {
 
-  html, body {
+body {
+    width: 430px;
     height: 100%;
-    margin: 0; /* ป้องกัน margin ที่อาจทำให้พื้นที่ไม่เต็ม */
-
+    margin: 0 auto; /* ป้องกัน margin ที่อาจทำให้พื้นที่ไม่เต็ม */
+    overflow-x: hidden;
 }
 
 .section_first-header_content-menu_right_content_group {
@@ -2743,6 +2744,7 @@ body {
     .section_fifth-content{
       margin: 15rem 0 10rem 0;
       width: 100%;
+      
     }
     .section_fifth-content_body_box{
       position: relative;
@@ -2781,18 +2783,22 @@ body {
     width: 100px;
 
   }
+  .section_fifth-content_body_box_bg{
+
+  }
   .section_fifth-content_body_box_bg_left{
     position: absolute;
     top: -3rem;
-    left: -5rem;
+    left: -2rem;
     z-index: -1;
 
   }
   .section_fifth-content_body_box_bg_left img{
-    width: 250px;
+    width: 200px;
     height: 100%;
     -webkit-transform: scaleX(-1);
     transform: scaleX(-1);
+    
 
   }
   .section_fifth-content_body_box_bg_left::after {
@@ -2808,15 +2814,17 @@ body {
   }
   .section_fifth-content_body_box_bg_right{
     position: absolute;
-    right:-5rem;
+    right:0rem;
     z-index: -1;
     top: -6rem;
   }
   .section_fifth-content_body_box_bg_right img{
-    width: 250px;
+    width: 200px;
     height: 100%;
     -webkit-transform: scaleX(-1);
     transform: scaleX(-1);
+    overflow: hidden;
+    
   }
 
   .section_fifth-content_body_box_bg_right::after {
@@ -3199,6 +3207,7 @@ body {
 
     .section_seventh-body {
 
+      width: 100%;
       grid-template-columns: max-content max-content;
       margin-top: 30px;
       align-items: start;
